package com.jiddisch.app5.api

data class Category(
    val id: Int,
    val name: String,
)
