package com.jiddisch.app5.api

class MainCategory(val id: Int, val name: String)
